[gd_scene load_steps=3 format=2]

[ext_resource path="res://ControlScenes/BackgroundScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ControlScenes/HostScreen.gd" type="Script" id=2]

[node name="HostScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Button" type="Button" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
margin_right = 54.0
margin_bottom = 20.0
text = "< Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.02
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
grow_vertical = 2

[node name="HostDetails" type="VBoxContainer" parent="Control"]
anchor_bottom = 1.0
margin_right = 113.0
custom_constants/separation = 27
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddress" type="Label" parent="Control/HostDetails"]
margin_top = 15.0
margin_right = 113.0
margin_bottom = 29.0
hint_tooltip = "This what other players
will use to connect to 
your game."
mouse_filter = 1
text = "Your IP: 127.0.0.1"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HostDetails"]
margin_top = 56.0
margin_right = 113.0
margin_bottom = 94.0
custom_constants/separation = 0

[node name="UsernameLabel" type="Label" parent="Control/HostDetails/VBoxContainer"]
margin_right = 113.0
margin_bottom = 14.0
text = "Your username:"

[node name="UsernameInput" type="LineEdit" parent="Control/HostDetails/VBoxContainer"]
margin_top = 14.0
margin_right = 113.0
margin_bottom = 38.0
text = "Player1"

[node name="ServerControlButton" type="Button" parent="Control/HostDetails"]
margin_top = 121.0
margin_right = 113.0
margin_bottom = 141.0
text = "Start Server"

[node name="ServerDetails" type="VBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -135.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 140, 0 )
custom_constants/separation = 11
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="Control/ServerDetails"]
margin_top = 3.0
margin_right = 140.0
margin_bottom = 17.0
text = "Status: Pending . . . "

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ServerDetails"]
margin_top = 28.0
margin_right = 140.0
margin_bottom = 122.0
custom_constants/separation = 0

[node name="PlayersLabel" type="Label" parent="Control/ServerDetails/VBoxContainer"]
margin_right = 140.0
margin_bottom = 14.0
text = "Players:"

[node name="PlayerList" type="ItemList" parent="Control/ServerDetails/VBoxContainer"]
margin_top = 14.0
margin_right = 140.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 80 )

[node name="LoadingTimer" type="Timer" parent="Control/ServerDetails"]
wait_time = 0.75
autostart = true

[node name="StartGameButton" type="Button" parent="Control/ServerDetails"]
margin_top = 133.0
margin_right = 140.0
margin_bottom = 153.0
disabled = true
text = "Start Game"

[node name="UsernameAlert" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -29.0
margin_right = 103.5
margin_bottom = 29.0
window_title = "Missing Username"

[node name="ErrorDescription" type="Label" parent="UsernameAlert"]
margin_left = 8.0
margin_top = 8.0
margin_right = 199.0
margin_bottom = 22.0
text = "You must provide a username"

[node name="ErrorAlert" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -29.0
margin_right = 140.5
margin_bottom = 29.0
dialog_text = "This is just a test description and not real"

[node name="ErrorDescription" type="Label" parent="ErrorAlert"]
margin_left = 8.0
margin_top = 22.0
margin_right = 273.0
margin_bottom = 36.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/HostDetails/ServerControlButton" to="." method="_on_ServerControlButton_pressed"]
[connection signal="timeout" from="Control/ServerDetails/LoadingTimer" to="." method="_on_LoadingTimer_timeout"]
[connection signal="pressed" from="Control/ServerDetails/StartGameButton" to="." method="_on_StartGameButton_pressed"]
